Add post and delete endpoints for watched movies
